--- a/calculator.html
+++ b/calculator.html
@@ -96,5 +96,14 @@
         </fieldset>
     </form>
 </body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S17D0EQ1L8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S17D0EQ1L8');
+</script>
 
 </html>
